Added functionality for adding a tip and login/register twaks

--- a/webclient/index.html
+++ b/webclient/index.html
@@ -20,6 +20,8 @@
 
     <script src="app/app.js"></script>
 
+    <script src="app/filters/convert-to-number-filter.js"></script>
+
     <script src="app/controllers/global-controller.js"></script>
     <script src="app/controllers/login-controller.js"></script>
     <script src="app/controllers/register-controller.js"></script>
@@ -27,6 +29,10 @@
 
     <script src="app/services/authentication-service.js"></script>
     <script src="app/services/user-manager-service.js"></script>
+    <script src="app/services/categories-manager-service.js"></script>
+    <script src="app/services/tips-and-tricks-manager-service.js"></script>
+
+
 
     <script src="app/app-config.js"></script>
 
