--- a/webclient/index.html
+++ b/webclient/index.html
@@ -9,6 +9,8 @@
     <title>Tips&Tricks</title>
 
     <link href="libs/bootstrap-3.3.6-dist/css/bootstrap.css" rel="stylesheet">
+    <link href="libs/angular-input-stars/angular-input-stars.css" rel="stylesheet">
+    <link href="libs/font-awesome-4.6.3\css\font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body ng-app="mainApp">
@@ -27,10 +29,15 @@
     <script src="app/controllers/register-controller.js"></script>
     <script src="app/controllers/home-controller.js"></script>
 
+
     <script src="app/services/authentication-service.js"></script>
     <script src="app/services/user-manager-service.js"></script>
     <script src="app/services/categories-manager-service.js"></script>
     <script src="app/services/tips-and-tricks-manager-service.js"></script>
+    <script src="app/services/rating-manager-service.js"></script>
+
+
+    <script src="libs/angular-input-stars/angular-input-stars.js"></script>
 
 
 
